# garuda-pari

pari-bench/: Cargo.toml
pari-bench/benches/: batch-verify-pari.rs  parallel-batch-verify-pari.rs  prove-verify-pari.rs  rescue-pari.rs
pari/examples/: PRIVATE_TRANSFER.md  private_transfer.rs
pari/src/: batch_verify.rs  data_structures.rs  generator.rs  lib.rs  prover.rs  solidity.rs  test.rs  utils.rs  verifier.rs
shared-utils/src/: lib.rs
