[package]
name = "pari-bench"
version = "0.1.0"
edition = "2021"
[dependencies]
pari = { path = "../pari" }
shared-utils = { path = "../shared-utils" }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-poly = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["constraints"] }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
merlin = { workspace = true }
displaydoc = { workspace = true }
tracing = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
num-bigint = { workspace = true }
polymath = { path = "../polymath" }


ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }

[[bench]]
name = "rescue-pari"
path = "benches/rescue-pari.rs"
harness = false


[[bench]]
name = "batch-verify-pari"
path = "benches/batch-verify-pari.rs"
harness = false

[[bench]]
name = "rescue-groth16"
path = "benches/rescue-groth16.rs"
harness = false


[[bench]]
name = "rescue-polymath"
path = "benches/rescue-polymath.rs"
harness = false

[features]
std = [
    "pari/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-relations/std",
    "ark-std/std",
    "ark-serialize/std",
]
print-trace = ["ark-std/print-trace"]
parallel = [
    "std",
    "pari/parallel",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "pari/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "ark-groth16/parallel",
    "rayon",
]
sol = ["pari/sol"]


# Plots for the paper

# Verifier time vs input size for Pari, Polymath, Groth16 
# VK size vs input size for Pari, Polymath, Groth16 
# Prover time (NUM_THREAD=1,4) for Pari, Polymath, Groth16
# PK size vs Num_INVOCATIONS for Pari, Polymath, Groth16
# Gas cost vs input size for Pari, Polymath and Groth16
